Another attempt at fixing the video layout shift

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -281,12 +281,17 @@ main section {
     width: 100%;
     max-width: 1920px;
     aspect-ratio: 16 / 9;
-    height: fit-content;
     justify-content: center;
     align-items: flex-start;
     border-radius: 4px;
     border: 2px solid #636e74;
     margin-bottom: 85px;
+    overflow: hidden;
+}
+
+.video-wrapper video {
+    width: 100%;
+    height: auto; /* Maintain the aspect ratio */
 }
 
 #table-wrapper {
